# machine-learning_intro

./: pyproject.toml  requirements.txt
matplotlib/: Matplotlib CSV.ipynb  matplotlib examples.ipynb
ml_model_for_real_data/: Airline Passanger Satisfaction.ipynb
numpy/: numpy dimensions.ipynb  numpy full examples.ipynb  random arrays.ipynb
pandas/: PandasTutorial.ipynb  pandas random csv.ipynb
scikit/: scikit examples.ipynb
